--- a/.github/workflows/qt6-build.yml
+++ b/.github/workflows/qt6-build.yml
@@ -1,7 +1,11 @@
 name: Build Qt6
-on: push
+on:
+  workflow_dispatch:
+  push:
+    tags:
+      - "v*"
 env:
-  RELEASE_TAG: packages
+  PKGDIR: pkg
 
 jobs:
   build:
@@ -17,13 +21,56 @@ jobs:
         shell: msys2 {0}
     steps:
       - uses: actions/checkout@v4
+      
       - uses: msys2/setup-msys2@v2
         with:
           msystem: UCRT64
           update: true
-          install: git mingw-w64-ucrt-x86_64-gcc mingw-w64-ucrt-x86_64-cmake mingw-w64-ucrt-x86_64-ninja mingw-w64-ucrt-x86_64-python
-      - name: Build
+          install: zip git mingw-w64-ucrt-x86_64-gcc mingw-w64-ucrt-x86_64-cmake mingw-w64-ucrt-x86_64-ninja mingw-w64-ucrt-x86_64-python
+      
+      - name: clone and build
         run: |
           pkg=${{ matrix.pkg }}
           _pkgfn=${pkg/6-/}
           git clone -b v${{ matrix.version }}  https://code.qt.io/qt/${_pkgfn}.git
+          cmake -B build -S $_pkgfn -G Ninja
+          cmake --build build
+      
+      - name: package
+        run: |
+          DESTDIR=${{ env.PKGDIR }} cmake --install build
+          zip -r ${{ matrix.pkg }}-${{ matrix.version }}.zip ./${{ env.PKGDIR }}
+      
+      - name: Archive production artifacts
+      - uses: actions/upload-artifact@v4
+        with:
+          name:  ${{ matrix.pkg }}-${{ matrix.version }}
+          path: |
+             ${{ matrix.pkg }}-${{ matrix.version }}.zip
+  
+  Upload-Release:
+    permissions: write-all
+    if: ${{ github.ref_type=='tag' }}
+    needs: [build]
+    runs-on: windows-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+        
+    - uses: actions/download-artifact@v4
+      with:
+        path: bin/
+        merge-multiple: true
+    
+    - name: Display structure of downloaded files
+      run: ls -R
+      working-directory: bin
+    
+    - name: Upload Release
+      uses: softprops/action-gh-release@v2
+      if: ${{  success() }}
+      with:
+        tag_name: ${{ github.ref_name }}
+        files: bin/*
+        generate_release_notes: true
+      
