--- a/.github/workflows/qt6-build.yml
+++ b/.github/workflows/qt6-build.yml
@@ -42,7 +42,7 @@ jobs:
           zip -r ${{ matrix.pkg }}-${{ matrix.version }}.zip ./${{ env.PKGDIR }}
       
       - name: Archive production artifacts
-      - uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4
         with:
           name:  ${{ matrix.pkg }}-${{ matrix.version }}
           path: |
