--- a/.github/workflows/qt6-build.yml
+++ b/.github/workflows/qt6-build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        pkg: [qt6-base]
+        pkg: [qt6-base qt6-tools qt6-svg qt6-webengine qt6-declarative qt6-quick3d qt6-serialport]
         version: [6.7.0]
     defaults:
       run:
@@ -31,13 +31,17 @@ jobs:
           pkg=${{ matrix.pkg }}
           _pkgfn=${pkg/6-/}
           git clone -b v${{ matrix.version }}  https://code.qt.io/qt/${_pkgfn}.git
+          if [ -f ${_pkgfn}/.gitmodules ];then
+              git submodule update --init --recursive
+          fi
           cmake -B build -S $_pkgfn -G Ninja -DCMAKE_INSTALL_PREFIX=${{ matrix.pkg }}
           cmake --build build --parallel 4
 
       - name: package
         run: |
           cmake --install build
-          zip -r ${{ matrix.pkg }}-${{ matrix.version }}.zip ${{ matrix.pkg }}
+          cd ${{ matrix.pkg }}
+          zip -r ${{ matrix.pkg }}-${{ matrix.version }}.zip .
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
