--- a/.github/workflows/qt6-build.yml
+++ b/.github/workflows/qt6-build.yml
@@ -41,7 +41,6 @@ jobs:
             mingw-w64-ucrt-x86_64-ninja
             mingw-w64-ucrt-x86_64-python
             mingw-w64-ucrt-x86_64-qt6
-            mingw-w64-ucrt-x86_64-assimp
 
       - name: clone and build
         run: |
@@ -58,7 +57,7 @@ jobs:
         run: |
           cmake --install build
           cd ${{ matrix.pkg }}
-          zip -r ${{ matrix.pkg }}-${{ matrix.version }}.zip .
+          zip -r ../${{ matrix.pkg }}-${{ matrix.version }}.zip .
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
